Fix removal of unsupported VM arguments from ini file
The previous approach removed only the option flag line and then tried to
re-insert "--add-opens" flags via addUnresolvedVMArgs, which was buggy and
left orphan value lines that corrupted the resulting command line.

Remove the value line together with its option when they are on separate
lines in the *.ini file, and drop the addUnresolvedVMArgs workaround.

Also-by: Vasili Gulevich <vasili.gulevich@xored.com>

Co-authored-by: basilevs <650857+basilevs@users.noreply.github.com>